src/components/Geosuggest/style.scss
.geosuggest {
  font-size: 1rem;
  position: relative;
  width: 50%;
  margin: 1em auto;
  text-align: left;

  &_unstyled {
    width: 100%;
    margin: 0;

    .geosuggest {
      &__input {
        @extend .form-control;
      }
    }
  }
}

.geosuggest__input {
  font-size: 3rem;
  width: 100%;
  border: 2px solid transparent;
  box-shadow: 0 0 1px $gray-dark;
  padding: .5em 1em;
  transition: border 0.2s, box-shadow 0.2s;
}

.geosuggest__input:focus {
  border-color: $brand-primary;
  box-shadow: 0 0 0 transparent;
}

.geosuggest__suggests {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  max-height: 25em;
  padding: 0;
  margin-top: -1px;
  background: $gray-light;
  border: 2px solid $brand-primary;
  border-top-width: 0;
  overflow-x: hidden;
  overflow-y: auto;
  list-style: none;
  z-index: 5;
  transition: max-height 0.2s, border 0.2s;
}

.geosuggest__suggests--hidden {
  max-height: 0;
  overflow: hidden;
  border-width: 0;
}

/**
 * A geosuggest item
 */
.geosuggest-item {
  font-size: 2rem;
  padding: .5em .65em;
  cursor: pointer;
}

.geosuggest-item:hover,
.geosuggest-item:focus {
  background: #f5f5f5;
}

.geosuggest-item--active {
  background: $brand-primary;
  color: $gray-light;
}

.geosuggest-item--active:hover,
.geosuggest-item--active:focus {
  background: #ccc;
}

